--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,110 @@
-.App {
-  text-align: center;
+body{
+  font-family: 'Comic Neue', cursive;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.navbar{
+  border-bottom: 1px solid black;
+}
+.logo {
+  border-radius: 160px;
+  margin-right: 8px;
+  
+}
+.bg-dark {
+  background-color: #020202!important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.nav-link {
+  color: rgba(255, 127, 80, 0.993) !important;
+  transition: color .15s linear !important;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav-link:hover {
+  color: rgba(74, 193, 230, 0.979) !important;
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 127, 80, 0.993)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
+}
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+outline: none;
+box-shadow: none;
+border: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Lines of the Toggler */
+.toggler-icon{
+width: 30px;
+height: 3px;
+background-color: rgba(255, 127, 80, 0.993);
+
+display: block;
+transition: all 0.2s;
+}
+
+/* Adds Space between the lines */
+.middle-bar{
+margin: 5px auto;
+}
+
+/* State when navbar is opened (START) */
+.navbar-toggler .top-bar {
+transform: rotate(45deg);
+transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+opacity: 0;
+filter: alpha(opacity=0);
+}
+
+.navbar-toggler .bottom-bar {
+transform: rotate(-45deg);
+transform-origin: 10% 90%;
+}
+/* State when navbar is opened (END) */
+
+/* State when navbar is collapsed (START) */
+.navbar-toggler.collapsed .top-bar {
+transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+opacity: 1;
+filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+transform: rotate(0);
+}
+i{
+  cursor: pointer;
+}
+footer{
+  background: #000;
+  padding-top: 2%;
+  margin-top: 15px;
+  position: relative;
+}
+
+footer span{
+  padding: 0.3em 0.7em;
+  color: #dbc1ac;
+  transition: all .5s ease;
+}
+footer p{
+  color: #dbc1ac;
+  font-size: 20px;
+}
+footer .top a{
+  position: absolute;
+  right: 2%;
+  top: 69%;
+  color: #dbc1ac;
+  font-size: 20px;
+}
+footer span a{
+  color: #dbc1ac !important;
 }
